--- a/styles/NewRowComponent.module.scss
+++ b/styles/NewRowComponent.module.scss
@@ -2,7 +2,7 @@
 	@apply w-full p-2 my-2 border-2 rounded-lg border-slate-300 focus:outline-none focus:ring-2 focus:ring-opacity-50;
 }
 .textarea {
-	@apply py-3;
+	@apply py-3 text-base leading-7;
 }
 .buttons {
 	@apply px-4 py-2 text-sm font-medium  border border-transparent cursor-pointer rounded-md focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 mx-3;
