--- a/styles/NewRowComponent.module.scss
+++ b/styles/NewRowComponent.module.scss
@@ -13,3 +13,7 @@
 		@apply focus-visible:ring-blue-500 bg-blue-100 hover:bg-blue-200 text-blue-900;
 	}
 }
+
+.sectionTitle {
+	@apply text-lg font-medium text-gray-700;
+}
