--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,10 +12,11 @@
 .footer {
   display: flex;
   flex: 1;
-  padding: 2rem 0;
+  padding: 1rem 0;
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
+  @apply text-xs text-gray-500;
 }
 
 .footer a {
