--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -21,9 +21,7 @@
 
 .lectureslineaires {
   @apply flex flex-col justify-between p-4 overflow-scroll md:flex-row flex-nowrap;
-}
+    overflow-y: hidden
 
-.lectureslineaires::-webkit-scrollbar {
-  @apply md:hidden;
 }
 
